[workspace]
members = ["scanners/*", "extract-latest"]

[package]
name = "crates-scanner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
flate2 = "1.0.25"
rayon = "1.6.1"
semver = "1.0.16"
tar = "0.4.38"
walkdir = "2.3.2"
