[package]
name = "index-compare"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crates-scanner = { path = "../.." }
rayon = "1.6.1"
serde_json = "1.0.93"
toml = "0.7.2"
walkdir = "2.3.2"
