[package]
name = "token-scanner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crates-scanner = { path = "../.." }
once_cell = "1.17.0"
proc-macro2 = "1.0.51"
regex = "1.7.1"
