[package]
name = "toml-version-compare"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crates-scanner = { path = "../.." }
toml5 = { version="0.5.3", package="toml" }
toml7 = { version="0.7", package="toml" }
